# EmberSync

./: .gitignore  CHANGELOG.md  EmberSync.toc  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Collectors/: AuctionHouse.lua  Calendar.lua  Character.lua  Chat.lua  Collections.lua  Crafting.lua  DamageMeter.lua  Guild.lua  GuildBank.lua  Housing.lua  Inventory.lua  Mail.lua  MythicPlus.lua  Professions.lua  Progression.lua  PvP.lua  WorldQuests.lua
Core/: Bootstrap.lua  CollectorManager.lua  Constants.lua  Coverage.lua  Database.lua  GuildLock.lua  Namespace.lua  Util.lua
Locales/: enUS.lua
UI/: MainWindow.lua  Minimap.lua
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/fixtures/: battle-net-aggregate.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api_client.rs  canonical.rs  commands.rs  config.rs  discovery.rs  guild.rs  ingest.rs  lib.rs  lua.rs  main.rs  models.rs  queue.rs  registry.rs  state.rs  watcher.rs
docs/: ARCHITECTURE.md  DATA_CATALOG.md  INSTALLATION.md  PRIVACY.md  RELEASE.md  SECURITY.md
installer/: README.md  SHA256SUMS.txt
installer/updater/: latest.json
protocol/: README.md  package-lock.json  package.json  tsconfig.json
protocol/fixtures/: canonical-envelope-v1.json  canonical-envelope-v1.sha256  dataset-registry-v1.json  embersync-saved-variables-v1.json
protocol/schema/: common-v1.schema.json  dataset-envelope-v1.schema.json  pairing-v1.schema.json  saved-variables-v1.schema.json  sync-v1.schema.json
protocol/src/: canonical.ts  envelope.ts  guilds.ts  index.ts  installation.ts  registry.ts  signing.ts  types.ts  validation.ts  version.ts
scripts/: fetch-release-artifacts.ps1  package-addon.ps1  write-checksums.ps1
tests/addon/: package.json  (+10 more)
(+26 files in other folders)
